# internal/router/router.go
@@ -16,27 +16,33 @@ func New(handlers *handlers.Handlers, secret string) chi.Router {
 	r := chi.NewRouter()
 	r.Group(func(r chi.Router) {
 		r.Use(middleware.RequestLogger)
-		r.Use(middleware.AllowJSONOnly)
 		r.Use(middleware.GzipBody)
 		r.Use(chiMiddleware.AllowContentEncoding("gzip"))
 		r.Use(chiMiddleware.Compress(gzip.BestSpeed))
 
 		r.Route("/api/user", func(r chi.Router) {
-			r.Post("/register", handlers.User.Register)
-			r.Post("/login", handlers.User.Login)
-			r.Get("/test", func(w http.ResponseWriter, r *http.Request) {
-				httputils.SuccessJSON(w)
+			// JSON
+			r.Group(func(r chi.Router) {
+				r.Use(middleware.AllowJSONOnly)
+
+				r.Post("/register", handlers.User.Register)
+				r.Post("/login", handlers.User.Login)
 			})
 
+			// with auth
 			r.Group(func(r chi.Router) {
 				r.Use(middleware.Auth(secret))
 
 				r.Get("/info", handlers.User.Info)
+				r.Post("/orders", handlers.Orders.UploadOrder)
+			})
+
+			r.Get("/test", func(w http.ResponseWriter, r *http.Request) {
+				httputils.SuccessJSON(w)
 			})
 		})
 	})
 
-	// Maybe make a separate service for swagger
 	r.Get("/swagger/*", httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8080/swagger/doc.json"),
 	))
